package supermarket;

public class Supplier implements Observer {

	@Override
	public void update(int q) {
		// TODO Auto-generated method stub
		
	}

}
